# link-shortener

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20231210143402_links.down.sql  20231210143402_links.up.sql  20231210190544_link_statistics.down.sql  20231210190544_link_statistics.up.sql  20231210202638_settings.down.sql  20231210202638_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
