[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-prometheus = "0.5.0"
base64 = "0.21.5"
dotenvy = "0.15.7"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
